--- a/todoSampleReactTabMsGraph/.mods/local.env
+++ b/todoSampleReactTabMsGraph/.mods/local.env
@@ -1,13 +1,13 @@
-AUTH_CLIENT_ID=
-AUTH_CLIENT_SECRET=
-AUTH_IDENTIFIER_URI=
-AUTH_OAUTH_TOKEN_ENDPOINT=
-AUTH_ALLOWED_APP_IDS=
+AUTH_CLIENT_ID=b3805604-4c33-48ce-adce-ff8336676409
+AUTH_CLIENT_SECRET=Hcp0voZlj2~NTzg-1~53hKKzE-L0gz5Ml8
+AUTH_IDENTIFIER_URI=api://localhost/b3805604-4c33-48ce-adce-ff8336676409
+AUTH_OAUTH_TOKEN_ENDPOINT=https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47/oauth2/v2.0/token
+AUTH_ALLOWED_APP_IDS=1fec8e78-bce4-4aaf-ab1b-5451cc387264;5e3ce6c0-2b1f-4285-8d4b-75ee78787346
 AUTH_urls=http://localhost:5000
-AUTH_SERVICE_PATH=
+AUTH_SERVICE_PATH=C:\Users\yife/.mods/localauth
 FRONTEND_BROWSER=none
 FRONTEND_HTTPS=true
-FRONTEND_REACT_APP_MODS_ENDPOINT=
-FRONTEND_REACT_APP_START_LOGIN_PAGE_URL=
+FRONTEND_REACT_APP_MODS_ENDPOINT=http://localhost:5000
+FRONTEND_REACT_APP_START_LOGIN_PAGE_URL=https://localhost:3000/auth-start.html
 FRONTEND_REACT_APP_FUNC_ENDPOINT=
 FRONTEND_REACT_APP_FUNC_NAME=
