--- a/share-now/.fx/manifest.remote.json
+++ b/share-now/.fx/manifest.remote.json
@@ -29,68 +29,40 @@
             "botId": "{botId}",
             "commands": [
                 {
-                    "id": "createCard",
-                    "context": [
-                        "compose"
-                    ],
-                    "description": "Command to run action to create a Card from Compose Box",
-                    "title": "Create Card",
-                    "type": "action",
-                    "parameters": [
-                        {
-                            "name": "title",
-                            "title": "Card title",
-                            "description": "Title for the card",
-                            "inputType": "text"
-                        },
-                        {
-                            "name": "subTitle",
-                            "title": "Subtitle",
-                            "description": "Subtitle for the card",
-                            "inputType": "text"
-                        },
-                        {
-                            "name": "text",
-                            "title": "Text",
-                            "description": "Text for the card",
-                            "inputType": "textarea"
-                        }
-                    ]
-                },
-                {
-                    "id": "shareMessage",
-                    "context": [
-                        "message"
-                    ],
-                    "description": "Test command to run action on message context (message sharing)",
-                    "title": "Share Message",
-                    "type": "action",
-                    "parameters": [
-                        {
-                            "name": "includeImage",
-                            "title": "Include Image",
-                            "description": "Include image in Hero Card",
-                            "inputType": "toggle"
-                        }
-                    ]
-                },
-                {
-                    "id": "searchQuery",
+                    "id": "allItems",
+                    "title": "All",
+                    "description": "Show all created posts.",
                     "context": [
                         "compose",
                         "commandBox"
                     ],
-                    "description": "Test command to run query",
-                    "title": "Search",
                     "type": "query",
                     "parameters": [
                         {
-                            "name": "searchQuery",
-                            "title": "Search Query",
-                            "description": "Your search query",
-                            "inputType": "text"
+                            "name": "searchText",
+                            "title": "allItems",
+                            "description": "Enter a keyword"
                         }
-                    ]
+                    ],
+                    "initialRun": true
+                },
+                {
+                    "id": "postedByMe",
+                    "title": "Posted by me",
+                    "description": "Show all posts created by me.",
+                    "context": [
+                        "compose",
+                        "commandBox"
+                    ],
+                    "type": "query",
+                    "parameters": [
+                        {
+                            "name": "searchText",
+                            "title": "postedByMe",
+                            "description": "Enter a keyword"
+                        }
+                    ],
+                    "initialRun": true
                 }
             ],
             "messageHandlers": [
@@ -102,16 +74,6 @@
                         ]
                     }
                 }
-            ]
-        }
-    ],
-    "configurableTabs": [
-        {
-            "configurationUrl": "{baseUrl}/index.html#/config",
-            "canUpdateConfiguration": true,
-            "scopes": [
-                "team",
-                "groupchat"
             ]
         }
     ],
