--- a/share-now/api/package.json
+++ b/share-now/api/package.json
@@ -11,10 +11,12 @@
     "@azure/functions": "^1.2.2",
     "@microsoft/microsoft-graph-client": "^2.2.1",
     "isomorphic-fetch": "^3.0.0",
-    "teamsdev-client": "^1.1.0"
+    "teamsdev-client": "^1.1.0",
+    "tedious": "^9.2.3"
   },
   "devDependencies": {
-    "typescript": "^3.3.3",
-    "azure-functions-core-tools": "^3.0.0"
+    "@types/tedious": "^4.0.3",
+    "azure-functions-core-tools": "^3.0.0",
+    "typescript": "^3.3.3"
   }
 }
