--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -19,13 +19,16 @@
         "axios": "^0.21.1",
         "botbuilder": "~4.11.0",
         "replace": "^1.2.0",
-        "restify": "~8.5.1"
+        "restify": "~8.5.1",
+        "teamsdev-client": "^1.1.0",
+        "tedious": "^9.2.3"
     },
     "devDependencies": {
         "@types/restify": "8.4.2",
-        "typescript": "~3.9.2",
+        "@types/tedious": "^4.0.3",
         "ngrok": "^3.4.0",
         "nodemon": "^2.0.7",
-        "ts-node": "~9.1.1"
+        "ts-node": "~9.1.1",
+        "typescript": "~3.9.2"
     }
 }
