--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "echobot",
+    "name": "teamsfx-sample-share-now-bot",
     "version": "1.0.0",
     "description": "Bot Builder v4 echo bot sample",
     "author": "Microsoft",
@@ -16,11 +16,12 @@
         "url": "https://github.com"
     },
     "dependencies": {
+        "adaptivecards": "^2.9.0",
         "axios": "^0.21.1",
         "botbuilder": "~4.11.0",
         "replace": "^1.2.0",
         "restify": "~8.5.1",
-        "teamsdev-client": "^1.1.0",
+        "teamsdev-client": "^1.1.1",
         "tedious": "^9.2.3"
     },
     "devDependencies": {
