--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "teamsfx-template-tab",
+  "name": "teamsfx-sample-share-now-tab",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@microsoft/teams-js": "^1.6.0",
     "@fluentui/react-northstar": "^0.54.0",
+    "@microsoft/teams-js": "^1.6.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -13,12 +13,12 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "msteams-react-base-component": "^3.1.0",
-    "tslib": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
-    "teamsdev-client": "^1.1.0",
+    "teamsdev-client": "^1.1.1",
+    "tslib": "^2.0.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
