--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -5,11 +5,6 @@
   "dependencies": {
     "@fluentui/react-northstar": "^0.54.0",
     "@microsoft/teams-js": "^1.6.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "msteams-react-base-component": "^3.1.0",
@@ -18,8 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
     "teamsdev-client": "^1.1.1",
-    "tslib": "^2.0.0",
-    "typescript": "^4.1.2"
+    "tslib": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,5 +42,13 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "."
+  "homepage": ".",
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/node": "^12.20.12",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "typescript": "^4.2.4"
+  }
 }
