--- a/faq-plus/bot/package.json
+++ b/faq-plus/bot/package.json
@@ -16,11 +16,15 @@
         "url": "https://github.com"
     },
     "dependencies": {
+        "@azure/cognitiveservices-qnamaker-runtime": "^1.0.1",
         "@azure/msal-node": "^1.0.0-beta.3",
         "@microsoft/microsoft-graph-client": "^2.2.1",
+        "adaptivecards": "^2.9.0",
+        "azure-storage": "^2.10.3",
         "botbuilder": "^4.12.0",
         "botbuilder-core": "^4.12.0",
         "botbuilder-dialogs": "^4.12.0",
+        "botframework-schema": "^4.12.0",
         "isomorphic-fetch": "^3.0.0",
         "restify": "^8.5.1",
         "teamsdev-client": "^1.0.0",
