feat: support user to ask question

--- a/faq-plus/.fx/local.env
+++ b/faq-plus/.fx/local.env
@@ -12,3 +12,8 @@ BOT_SQL_PASSWORD=
 BOT_IDENTITY_ID=
 BOT_API_ENDPOINT=
 BOT_M365_APPLICATION_ID_URI=
+BOT_SCORETHRESHOLD=
+BOT_STORAGECONNECTIONSTRING=
+BOT_QNAMAKERAPIENDPOINTURL=
+BOT_QNAMAKERHOSTURL=
+BOT_QNAMAKERSUBSCRIPTIONKEY=
