--- a/faq-plus/bot/package.json
+++ b/faq-plus/bot/package.json
@@ -16,7 +16,9 @@
         "url": "https://github.com"
     },
     "dependencies": {
+        "@azure/cognitiveservices-qnamaker": "^3.2.0",
         "@azure/cognitiveservices-qnamaker-runtime": "^1.0.1",
+        "@azure/ms-rest-azure-js": "^2.1.0",
         "@azure/msal-node": "^1.0.0-beta.3",
         "@microsoft/microsoft-graph-client": "^2.2.1",
         "adaptivecards": "^2.9.0",
