--- a/faq-plus/package.json
+++ b/faq-plus/package.json
@@ -6,5 +6,6 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {}
 }
