add post update and delete

--- a/share-now/.fx/manifest.source.json
+++ b/share-now/.fx/manifest.source.json
@@ -19,7 +19,7 @@
         "full": "shareNow"
     },
     "description": {
-        "short": "2Encourage co-workers to knowledge-based sharing of posts, videos, or topics.",
+        "short": "Encourage co-workers to knowledge-based sharing of posts, videos, or topics.",
         "full": "Encourage and introduce your co-workers to a widespread knowledge-based sharing of posts, videos, or topics with a bite-sized information on how it influenced them and learn together in Teams."
     },
     "accentColor": "#FFFFFF",
