--- a/in-meeting-app/bot/package.json
+++ b/in-meeting-app/bot/package.json
@@ -4,7 +4,9 @@
     "description": "The API server for a Teams tab app",
     "main": "app.js",
     "scripts": {
-        "start": "node ./index.js"
+        "start:local": "SET NODE_ENV=development.local&& node ./index.js",
+        "start": "node ./index.js",
+        "watch": "nodemon ./index.js"
     },
     "author": "",
     "license": "ISC",
@@ -12,8 +14,8 @@
         "botbuilder": "^4.12.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "html-entities": "^1.2.1",
         "jwt-decode": "^2.2.0",
-        "node-fetch": "^2.6.0",
-        "html-entities": "^1.2.1"
+        "node-fetch": "^2.6.0"
     }
 }
