--- a/todo-list-with-Azure-backend/api/package.json
+++ b/todo-list-with-Azure-backend/api/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@azure/functions": "^1.2.2",
-    "teamsdev-client": "^1.1.0",
+    "@microsoft/teamsfx": "^0.1.0",
     "isomorphic-fetch": "^3.0.0",
     "tedious": "^9.2.1"
   },
