update share-now readme and manifest

--- a/share-now/.fx/manifest.source.json
+++ b/share-now/.fx/manifest.source.json
@@ -15,8 +15,8 @@
         "outline": "outline.png"
     },
     "name": {
-        "short": "shareNow",
-        "full": "shareNow"
+        "short": "ShareNow",
+        "full": "ShareNow"
     },
     "description": {
         "short": "Encourage co-workers to knowledge-based sharing of posts, videos, or topics.",
