fix: change package and fix build error

--- a/share-now/tabs/tsconfig.json
+++ b/share-now/tabs/tsconfig.json
@@ -19,7 +19,8 @@
 		"isolatedModules": true,
 		"noImplicitAny": false,
 		"noEmit": true,
-		"jsx": "preserve"
+		"jsx": "preserve",
+		"importHelpers": true
 	},
 	"include": [
 		"src"
