--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -7,6 +7,7 @@
 		"@fluentui/react-icons-northstar": "^0.49.0",
 		"@fluentui/react-northstar": "^0.49.0",
 		"@microsoft/teams-js": "1.6.0",
+		"@microsoft/teamsfx": "^0.1.0",
 		"@uifabric/icons": "7.3.47",
 		"axios": "^0.21.1",
 		"bootstrap": "4.5.0",
@@ -20,8 +21,8 @@
 		"react-infinite-scroller": "^1.2.4",
 		"react-router-dom": "5.2.0",
 		"react-scripts": "3.4.1",
-		"typescript": "3.9.3",
-		"teamsdev-client": "^1.1.1"
+		"tslib": "^2.0.0",
+		"typescript": "3.9.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
