fix: update to latest version

--- a/share-now/.vscode/settings.json
+++ b/share-now/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "azureFunctions.stopFuncTaskPostDebug": false
+    "azureFunctions.stopFuncTaskPostDebug": false,
+    "azureFunctions.showProjectWarning": false,
+    "csharp.suppressDotnetRestoreNotification": true
 }
