--- a/todo-list-with-Azure-backend/.vscode/launch.json
+++ b/todo-list-with-Azure-backend/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch Remote (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
-            "url": "https://teams.microsoft.com/_#/l/app/${teamsAppId}?installAppPackage=true",
+            "url": "https://teams.microsoft.com/l/app/${teamsAppId}?installAppPackage=true&${account-hint}",
             "presentation": {
                 "group": "remote",
                 "order": 1
@@ -15,7 +15,7 @@
             "name": "Launch Remote (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "https://teams.microsoft.com/_#/l/app/${teamsAppId}?installAppPackage=true",
+            "url": "https://teams.microsoft.com/l/app/${teamsAppId}?installAppPackage=true&${account-hint}",
             "presentation": {
                 "group": "remote",
                 "order": 2
@@ -25,9 +25,8 @@
             "name": "Start and Attach to Frontend (Edge)",
             "type": "pwa-msedge",
             "request": "launch",
-            "url": "https://teams.microsoft.com/_#/l/app/${localTeamsAppId}?installAppPackage=true",
+            "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&${account-hint}",
             "preLaunchTask": "Start Frontend",
-            "postDebugTask": "Stop All Services",
             "cascadeTerminateToConfigurations": [
                 "Start and Attach to Backend"
             ],
@@ -40,9 +39,8 @@
             "name": "Start and Attach to Frontend (Chrome)",
             "type": "pwa-chrome",
             "request": "launch",
-            "url": "https://teams.microsoft.com/_#/l/app/${localTeamsAppId}?installAppPackage=true",
+            "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&${account-hint}",
             "preLaunchTask": "Start Frontend",
-            "postDebugTask": "Stop All Services",
             "cascadeTerminateToConfigurations": [
                 "Start and Attach to Backend"
             ],
@@ -53,11 +51,11 @@
         },
         {
             "name": "Start and Attach to Backend",
-            "type": "node",
+            "type": "pwa-node",
             "request": "attach",
             "port": 9229,
             "restart": true,
-            "preLaunchTask": "teamsfx: backend start",
+            "preLaunchTask": "Start Backend",
             "presentation": {
                 "group": "all",
                 "hidden": true
