--- a/todo-list-with-Azure-backend/.vscode/settings.json
+++ b/todo-list-with-Azure-backend/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "azureFunctions.stopFuncTaskPostDebug": false
+    "azureFunctions.stopFuncTaskPostDebug": false,
+    "azureFunctions.showProjectWarning": false,
+    "csharp.suppressDotnetRestoreNotification": true
 }
