--- a/share-now/api/package.json
+++ b/share-now/api/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@azure/functions": "^1.2.2",
     "@microsoft/microsoft-graph-client": "^2.2.1",
+    "@microsoft/teamsfx": "^0.1.1",
     "isomorphic-fetch": "^3.0.0",
-    "teamsdev-client": "^1.1.1",
     "tedious": "^9.2.3"
   },
   "devDependencies": {
