--- a/share-now/bot/package.json
+++ b/share-now/bot/package.json
@@ -16,12 +16,12 @@
         "url": "https://github.com/OfficeDev/TeamsFx-Samples.git"
     },
     "dependencies": {
+        "@microsoft/teamsfx": "^0.1.1",
         "adaptivecards": "^2.9.0",
         "axios": "^0.21.1",
         "botbuilder": "~4.11.0",
         "replace": "^1.2.0",
         "restify": "~8.5.1",
-        "teamsdev-client": "^1.1.1",
         "tedious": "^9.2.3"
     },
     "devDependencies": {
