fix message extension setting

--- a/share-now/.fx/settings.json
+++ b/share-now/.fx/settings.json
@@ -5,7 +5,7 @@
         "version": "1.0.0",
         "capabilities": [
             "Tab",
-            "MessageExtension"
+            "MessagingExtension"
         ],
         "hostType": "Azure",
         "azureResources": [
