--- a/in-meeting-app/bot/package.json
+++ b/in-meeting-app/bot/package.json
@@ -4,7 +4,7 @@
     "description": "The API server for a Teams tab app",
     "main": "app.js",
     "scripts": {
-        "start:local": "SET NODE_ENV=development.local&& node ./index.js",
+        "start:local": "CROSS-ENV NODE_ENV=development.local node ./index.js",
         "start": "node ./index.js",
         "watch": "nodemon ./index.js"
     },
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "botbuilder": "^4.12.0",
+        "cross-env": "^7.0.3",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "html-entities": "^1.2.1",
