Update in-meeting app to fix the 'npm start' bug on WSL

--- a/in-meeting-app/bot/package.json
+++ b/in-meeting-app/bot/package.json
@@ -4,7 +4,7 @@
     "description": "The API server for a Teams tab app",
     "main": "app.js",
     "scripts": {
-        "start:local": "CROSS-ENV NODE_ENV=development.local node ./index.js",
+        "start:local": "cross-env NODE_ENV=development.local node ./index.js",
         "start": "node ./index.js",
         "watch": "nodemon ./index.js"
     },
