--- a/faq-plus/bot/package.json
+++ b/faq-plus/bot/package.json
@@ -1,19 +1,19 @@
 {
-    "name": "echobot",
+    "name": "faqplus",
     "version": "1.0.0",
-    "description": "Bot Builder v4 echo bot sample",
+    "description": "TeamsFx FAQ Plus sample",
     "author": "Microsoft",
     "license": "MIT",
     "main": "./lib/index.js",
     "scripts": {
-        "build": "tsc --build && shx cp -r ./public ./lib/",
+        "build": "tsc --build",
         "start": "node ./lib/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com"
+        "url": "https://github.com/OfficeDev/TeamsFx-Samples"
     },
     "dependencies": {
         "@azure/cognitiveservices-qnamaker": "^3.2.0",
