--- a/faq-plus/bot/package.json
+++ b/faq-plus/bot/package.json
@@ -28,10 +28,9 @@
     },
     "devDependencies": {
         "@types/restify": "8.4.2",
-        "ts-node": "~9.1.1",
-        "typescript": "~3.9.2",
         "ngrok": "^3.4.0",
         "nodemon": "^2.0.7",
-        "shx": "^0.3.3"
+        "ts-node": "~9.1.1",
+        "typescript": "~3.9.2"
     }
 }
