--- a/faq-plus/bot/package.json
+++ b/faq-plus/bot/package.json
@@ -10,7 +10,8 @@
         "start": "node ./lib/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "watch": "nodemon --watch ./src -e ts --exec \"npm run start\"",
-        "lint": "eslint  **/*.ts --fix"
+        "lint": "eslint **/*.ts",
+        "lint:fix": "eslint **/*.ts --fix"
     },
     "repository": {
         "type": "git",
