--- a/todo-list-SPFx/SPFx/package.json
+++ b/todo-list-SPFx/SPFx/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "gulp bundle",
     "clean": "gulp clean",
-    "test": "gulp test"
+    "test": "gulp test",
+    "format": "prettier --write \"{src,tests}/**/*.ts\""
   },
   "dependencies": {
     "react": "16.9.0",
