--- a/in-meeting-app/manifest/local/manifest.json
+++ b/in-meeting-app/manifest/local/manifest.json
@@ -6,7 +6,7 @@
   "packageName": "com.microsoft.teams.extension",
   "developer": {
     "name": "Teams App, Inc.",
-    "websiteUrl": "{baseUrl}",
+    "websiteUrl": "{baseUrl}/tab",
     "privacyUrl": "{baseUrl}/privacy",
     "termsOfUseUrl": "{baseUrl}/termsofuse"
   },
