--- a/todo-list-SPFx/.fx/manifest.source.json
+++ b/todo-list-SPFx/.fx/manifest.source.json
@@ -24,7 +24,7 @@
     "accentColor": "#004578",
     "configurableTabs": [
         {
-            "configurationUrl": "https://{teamSiteDomain}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest=/_layouts/15/teamshostedapp.aspx%3Fteams%26componentId=c314487b-f51c-474d-823e-a2c3ec82b1ff%26forceLocale={locale}",
+            "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/teamshostedapp.aspx%3Fteams%26componentId=c314487b-f51c-474d-823e-a2c3ec82b1ff%26forceLocale={locale}",
             "canUpdateConfiguration": true,
             "scopes": [
                 "team",
