--- a/todo-list-SPFx/.fx/manifest.source.json
+++ b/todo-list-SPFx/.fx/manifest.source.json
@@ -27,8 +27,7 @@
             "configurationUrl": "https://{teamSiteDomain}{teamSitePath}/_layouts/15/TeamsLogon.aspx?SPFX=true&dest={teamSitePath}/_layouts/15/teamshostedapp.aspx%3Fteams%26componentId=c314487b-f51c-474d-823e-a2c3ec82b1ff%26forceLocale={locale}",
             "canUpdateConfiguration": true,
             "scopes": [
-                "team",
-                "groupchat"
+                "team"
             ]
         }
     ],
