--- a/todo-list-with-Azure-backend/package.json
+++ b/todo-list-with-Azure-backend/package.json
@@ -6,5 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "devDependencies": {
+        "@microsoft/teamsfx-cli": "0.*"
+    },
     "license": "MIT"
 }
