chore: comment test_env

--- a/todo-list-with-Azure-backend/.github/workflows/cd.yml
+++ b/todo-list-with-Azure-backend/.github/workflows/cd.yml
@@ -10,7 +10,7 @@ jobs:
   buildAndPublish:
     runs-on: ubuntu-latest
     # You can uncomment the line below to use environments (refer to https://docs.github.com/en/actions/reference/environments). 
-    environment: test_environment
+    # environment: test_environment
     env:
       AZURE_ACCOUNT_NAME: ${{secrets.AZURE_ACCOUNT_NAME}}
       AZURE_ACCOUNT_PASSWORD: ${{secrets.AZURE_ACCOUNT_PASSWORD}}
