feat(bot): simple bot with sso TS

--- a/bot-sso/ts/.fx/settings.json
+++ b/bot-sso/ts/.fx/settings.json
@@ -1,6 +1,6 @@
 {
-    "appName": "sfawerw",
-    "projectId": "3c97f774-72d4-4c9f-902f-9e55b3d79a52",
+    "appName": "SSOBotSample",
+    "projectId": "dda5dd60-daf9-44b1-8ce2-f6168fedb139",
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
