--- a/bot-sso/ts/bot/package.json
+++ b/bot-sso/ts/bot/package.json
@@ -16,6 +16,8 @@
     "url": "https://github.com"
   },
   "dependencies": {
+    "adaptive-expressions": "^4.14.1",
+    "adaptivecards-templating": "^2.1.0",
     "@azure/msal-node": "^1.0.0-beta.3",
     "@microsoft/microsoft-graph-client": "^2.2.1",
     "botbuilder": "~4.14.0",
