--- a/todo-list-SPFx/.vscode/launch.json
+++ b/todo-list-SPFx/.vscode/launch.json
@@ -94,6 +94,68 @@
                 "group": "remote",
                 "order": 2
             }
+        },
+        {
+            "name": "Start Teams workbench (Edge)",
+            "type": "pwa-msedge",
+            "request": "launch",
+            "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "webRoot": "${workspaceRoot}/SPFx",
+            "sourceMaps": true,
+            "sourceMapPathOverrides": {
+                "webpack:///.././src/*": "${webRoot}/src/*",
+                "webpack:///../../../src/*": "${webRoot}/src/*",
+                "webpack:///../../../../src/*": "${webRoot}/src/*",
+                "webpack:///../../../../../src/*": "${webRoot}/src/*"
+            },
+            "postDebugTask": "Terminate All Tasks",
+            "presentation": {
+                "hidden": true
+            }
+        },
+        {
+            "name": "Start Teams workbench (Chrome)",
+            "type": "pwa-chrome",
+            "request": "launch",
+            "url": "https://teams.microsoft.com/l/app/${localTeamsAppId}?installAppPackage=true&webjoin=true&${account-hint}",
+            "webRoot": "${workspaceRoot}/SPFx",
+            "sourceMaps": true,
+            "sourceMapPathOverrides": {
+                "webpack:///.././src/*": "${webRoot}/src/*",
+                "webpack:///../../../src/*": "${webRoot}/src/*",
+                "webpack:///../../../../src/*": "${webRoot}/src/*",
+                "webpack:///../../../../../src/*": "${webRoot}/src/*"
+            },
+            "postDebugTask": "Terminate All Tasks",
+            "presentation": {
+                "hidden": true
+            }
+        }
+    ],
+    "compounds": [
+        {
+            "name": "Teams workbench (Edge)",
+            "configurations": [
+                "Start Teams workbench (Edge)"
+            ],
+            "preLaunchTask": "prepare dev env",
+            "presentation": {
+                "group": "teams",
+                "order": 1
+            },
+            "stopAll": true
+        },
+        {
+            "name": "Teams workbench (Chrome)",
+            "configurations": [
+                "Start Teams workbench (Chrome)"
+            ],
+            "preLaunchTask": "prepare dev env",
+            "presentation": {
+                "group": "teams",
+                "order": 2
+            },
+            "stopAll": true
         }
     ]
 }
