--- a/todo-list-SPFx/.vscode/tasks.json
+++ b/todo-list-SPFx/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "command": "echo ${command:fx-extension.validate-spfx-dependencies}"
         },
         {
-            "label": "npm install",
+            "label": "spfx npm install",
             "type": "shell",
             "command": "npm install",
             "options": {
@@ -26,7 +26,7 @@
             "options": {
                 "cwd": "${workspaceFolder}/SPFx"
             },
-            "dependsOn": "npm install"
+            "dependsOn": "spfx npm install"
         },
         {
             "label": "gulp serve",
@@ -59,6 +59,19 @@
                 "cwd": "${workspaceFolder}/SPFx"
             },
             "dependsOn": "gulp trust-dev-cert"
+        },
+        {
+            "label": "prepare local environment",
+            "type": "shell",
+            "command": "echo ${command:fx-extension.pre-debug-check}"
+        },
+        {
+            "label": "prepare dev env",
+            "dependsOn": [
+                "prepare local environment",
+                "gulp serve"
+            ],
+            "dependsOrder": "parallel"
         },
         {
             "label": "Terminate All Tasks",
