chore: add sample flag so telemetry will include the right property

--- a/faq-plus/.fx/settings.json
+++ b/faq-plus/.fx/settings.json
@@ -12,5 +12,6 @@
             "fx-resource-bot",
             "fx-resource-aad-app-for-teams"
         ]
-    }
+    },
+    "isFromSample": true
 }
