--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -7,7 +7,7 @@
 		"@fluentui/react-icons-northstar": "^0.49.0",
 		"@fluentui/react-northstar": "^0.49.0",
 		"@microsoft/teams-js": "^1.10.0",
-		"@microsoft/teamsfx": "^0.2.1",
+		"@microsoft/teamsfx": "^0.3.0",
 		"@uifabric/icons": "^7.5.23",
 		"axios": "^0.21.1",
 		"bootstrap": "5.0.1",
@@ -20,8 +20,8 @@
 		"react-infinite-scroller": "^1.2.4",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^4.0.3",
-		"typescript": "^4.2.4",
-		"tslib": "^2.0.0"
+		"tslib": "^2.0.0",
+		"typescript": "^4.2.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
