--- a/todo-list-with-Azure-backend-M365/tabs/package.json
+++ b/todo-list-with-Azure-backend-M365/tabs/package.json
@@ -5,15 +5,13 @@
   "dependencies": {
     "@fluentui/react-northstar": "^0.51.0",
     "@microsoft/teams-js": "2.0.0-beta.0",
+    "@microsoft/teamsfx": "0.3.1-beta.0",
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
-    "typestyle": "^2.1.0",
-    "@azure/identity": "^1.3.0",
-    "jwt-decode": "^3.1.2",
-    "@microsoft/microsoft-graph-client": "^2.2.1"
+    "typestyle": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
