--- a/hello-world-tab-app/.fx/configs/projectSettings.json
+++ b/hello-world-tab-app/.fx/configs/projectSettings.json
@@ -1,5 +1,5 @@
 {
-    "appName": "helloWorldTabapp",
+    "appName": "helloWorldTabApp",
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
