--- a/share-now/templates/appPackage/manifest.local.template.json
+++ b/share-now/templates/appPackage/manifest.local.template.json
@@ -2,21 +2,21 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.9/MicrosoftTeams.schema.json",
     "manifestVersion": "1.9",
     "version": "1.0.0",
-    "id": "{appid}",
+    "id": "{{localSettings.teamsApp.teamsAppId}}",
     "packageName": "com.microsoft.teams.extension",
     "developer": {
         "name": "Teams App, Inc.",
-        "websiteUrl": "{baseUrl}",
-        "privacyUrl": "{baseUrl}/index.html#/privacy",
-        "termsOfUseUrl": "{baseUrl}/index.html#/termsofuse"
+        "websiteUrl": "{{{localSettings.frontend.tabEndpoint}}}",
+        "privacyUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/privacy",
+        "termsOfUseUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/termsofuse"
     },
     "icons": {
-        "color": "color.png",
-        "outline": "outline.png"
+        "color": "resources/color.png",
+        "outline": "resources/outline.png"
     },
     "name": {
-        "short": "ShareNow",
-        "full": "ShareNow"
+        "short": "ShareNow-local-debug",
+        "full": "ShareNow-local-debug"
     },
     "description": {
         "short": "Encourage co-workers to knowledge-based sharing of posts, videos, or topics.",
@@ -26,7 +26,7 @@
     "bots": [],
     "composeExtensions": [
         {
-            "botId": "{botId}",
+            "botId": "{{localSettings.bot.botId}}",
             "commands": [
                 {
                     "id": "allItems",
@@ -81,8 +81,8 @@
         {
             "entityId": "index",
             "name": "Personal Tab",
-            "contentUrl": "{baseUrl}/index.html#/tab",
-            "websiteUrl": "{baseUrl}/index.html#/tab",
+            "contentUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/tab",
+            "websiteUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/tab",
             "scopes": [
                 "personal"
             ]
@@ -94,7 +94,7 @@
     ],
     "validDomains": [],
     "webApplicationInfo": {
-        "id": "{appClientId}",
-        "resource": "{webApplicationInfoResource}"
+        "id": "{{localSettings.auth.clientId}}",
+        "resource": "{{{localSettings.auth.applicationIdUris}}}"
     }
 }
