feat(bot): upgrade project

--- a/bot-sso/.fx/configs/projectSettings.json
+++ b/bot-sso/.fx/configs/projectSettings.json
@@ -16,5 +16,6 @@
             "fx-resource-appstudio"
         ]
     },
-    "programmingLanguage": "typescript"
+    "programmingLanguage": "typescript",
+    "version": "1.0.0"
 }
