chore: re-generate tab app with latest extension

--- a/hello-world-tab-app/package.json
+++ b/hello-world-tab-app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "helloWorldTabapp",
+    "name": "helloWorldTabApp",
     "version": "0.0.1",
     "description": "",
     "author": "",
