--- a/hello-world-tab-app/.fx/configs/projectSettings.json
+++ b/hello-world-tab-app/.fx/configs/projectSettings.json
@@ -10,13 +10,14 @@
         ],
         "activeResourcePlugins": [
             "fx-resource-frontend-hosting",
+            "fx-resource-identity",
             "fx-resource-aad-app-for-teams",
             "fx-resource-local-debug",
             "fx-resource-appstudio",
             "fx-resource-simple-auth"
         ]
     },
-    "version": "1.0.0",
+    "version": "2.0.0",
     "isFromSample": false,
     "programmingLanguage": "typescript"
 }
