--- a/faq-plus/templates/appPackage/manifest.local.template.json
+++ b/faq-plus/templates/appPackage/manifest.local.template.json
@@ -2,20 +2,21 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.9/MicrosoftTeams.schema.json",
     "manifestVersion": "1.9",
     "version": "1.0.0",
-    "id": "{appid}",
+    "id": "{{localSettings.teamsApp.teamsAppId}}",
     "packageName": "com.microsoft.teams.faqplus",
     "developer": {
         "name": "Teams App, Inc.",
-        "websiteUrl": "{baseUrl}",
-        "privacyUrl": "{baseUrl}/index.html#/privacy",
-        "termsOfUseUrl": "{baseUrl}/index.html#/termsofuse"
+        "websiteUrl": "{{{localSettings.frontend.tabEndpoint}}}",
+        "privacyUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/privacy",
+        "termsOfUseUrl": "{{{localSettings.frontend.tabEndpoint}}}/index.html#/termsofuse"
     },
     "icons": {
-        "color": "color.png",
-        "outline": "outline.png"
+        "color": "resources/color.png",
+        "outline": "resources/outline.png"
     },
     "name": {
-        "short": "FaqPlus"
+        "short": "FaqPlus-local-debug",
+        "full": "FaqPlus-local-debug"
     },
     "description": {
         "short": "A friendly FAQ bot that answers questions and connects you to experts.",
@@ -24,7 +25,7 @@
     "accentColor": "#FFFFFF",
     "bots": [
         {
-            "botId": "{botId}",
+            "botId": "{{localSettings.bot.botId}}",
             "scopes": [
                 "personal",
                 "team"
@@ -42,7 +43,7 @@
     ],
     "validDomains": [],
     "webApplicationInfo": {
-        "id": "{appClientId}",
-        "resource": "{webApplicationInfoResource}"
+        "id": "{{localSettings.auth.clientId}}",
+        "resource": "{{{localSettings.auth.applicationIdUris}}}"
     }
 }
