--- a/bot-sso/.fx/configs/projectSettings.json
+++ b/bot-sso/.fx/configs/projectSettings.json
@@ -10,11 +10,13 @@
         ],
         "azureResources": [],
         "activeResourcePlugins": [
+            "fx-resource-identity",
             "fx-resource-bot",
             "fx-resource-aad-app-for-teams",
             "fx-resource-local-debug",
             "fx-resource-appstudio"
         ]
     },
-    "programmingLanguage": "typescript"
+    "programmingLanguage": "typescript",
+    "version": "2.0.0"
 }
