fix: rename sample app

--- a/hello-world-tab-with-backend/.fx/configs/projectSettings.json
+++ b/hello-world-tab-with-backend/.fx/configs/projectSettings.json
@@ -1,5 +1,5 @@
 {
-    "appName": "helloWorldTabAppWithAzureBackend",
+    "appName": "Hello World Tab with Backend",
     "projectId": "952c1cd0-c7cf-426d-bbdc-4b4842a9a19f",
     "solutionSettings": {
         "name": "fx-solution-azure",
