--- a/hello-world-tab/package.json
+++ b/hello-world-tab/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "helloWorldTabApp",
+    "name": "hello-world-tab",
     "version": "0.0.1",
     "description": "",
     "author": "",
