--- a/in-meeting-app/.fx/configs/projectSettings.json
+++ b/in-meeting-app/.fx/configs/projectSettings.json
@@ -17,5 +17,7 @@
             "fx-resource-bot"
         ]
     },
-    "isFromSample": true
+    "isFromSample": true,
+    "programmingLanguage": "javascript",
+    "version": "1.0.0"
 }
