--- a/todo-list-with-Azure-backend/.github/workflows/cd.yml
+++ b/todo-list-with-Azure-backend/.github/workflows/cd.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - main
+
 jobs:
   buildAndPublish:
     runs-on: ubuntu-latest
@@ -19,6 +20,10 @@ jobs:
       M365_ACCOUNT_NAME: ${{secrets.M365_ACCOUNT_NAME}}
       M365_ACCOUNT_PASSWORD: ${{secrets.M365_ACCOUNT_PASSWORD}}
 
+      # The following line is to enable insider preview features.
+      TEAMSFX_INSIDER_PREVIEW: true
+      # To specify the env name for multi-env feature.
+      TEAMSFX_ENV_NAME: dev
     steps:
       # Setup environment.
       - uses: actions/setup-node@v2
@@ -44,35 +49,42 @@ jobs:
 
       # We suggest to do the `teamsfx provision` step manually or in a separate workflow. The following steps are for your reference.
       # After provisioning, you should commit .fx/env.default.json into the repository.
-      # You should save the file content of default.userdata into the repository secrets (https://docs.github.com/en/actions/reference/encrypted-secrets) which can be refered by the step with name 'Generate default.userdata'. 
+      # You should save the file content of default.userdata into the repository secrets (https://docs.github.com/en/actions/reference/encrypted-secrets) with name 'USERDATA_CONTENT' for future usage. 
       #- name: Provision hosting environment
       #  uses: OfficeDev/teamsfx-cli-action@v1
+      #  env:
+      #     SQL_ADMIN_NAME: ${{secrets.SQL_ADMIN_NAME}}
+      #     SQL_PASSWORD: ${{secrets.SQL_PASSWORD}}
       #  with:
       #    commands: provision
+      #    env: ${{env.TEAMSFX_ENV_NAME}}
       #    subscription: ${{env.AZURE_SUBSCRIPTION_ID}}
+      #    sql-admin-name: ${{env.SQL_ADMIN_NAME}}
+      #    sql-password: ${{env.SQL_PASSWORD}}
 
       #- name: Commit provision configs if necessary
       #  uses: stefanzweifel/git-auto-commit-action@v4
       #  with:
       #    commit_message: "chore: commit provision configs"
-      #    file_pattern: .fx/env.default.json
+      #    file_pattern: .fx/states/state.${{env.TEAMSFX_ENV_NAME}}.json
       
-      #- name: Upload default.userdata as artifact
+      #- name: Upload userdata as artifact
       #  uses: actions/upload-artifact@v2
       #  with:
-      #    name: defaultUserData
-      #    path: .fx/default.userdata
+      #    name: UserData
+      #    path: .fx/states/${{env.TEAMSFX_ENV_NAME}}.userdata
       
-      - name: Generate default.userdata
+      - name: Generate userdata
         env:
           USERDATA_CONTENT: ${{ secrets.USERDATA_CONTENT }}
         run: |
-          [ ! -z "${USERDATA_CONTENT}" ] && echo "${USERDATA_CONTENT}" > .fx/default.userdata
+          [ ! -z "${USERDATA_CONTENT}" ] && echo "${USERDATA_CONTENT}" > .fx/states/${TEAMSFX_ENV_NAME}.userdata
       
       - name: Deploy to hosting environment
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
           commands: deploy
+          env: ${{env.TEAMSFX_ENV_NAME}} 
 
       # This step is to pack the Teams App as zip file,
       # which can be used to be uploaded onto Teams Client for installation.
@@ -80,14 +92,16 @@ jobs:
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
           commands: package
+          env: ${{env.TEAMSFX_ENV_NAME}} 
 
       - name: Upload Teams App's package as artifact
         uses: actions/upload-artifact@v2
         with:
           name: appPackage
-          path: appPackage/appPackage.zip
+          path: build/appPackage/appPackage.${{env.TEAMSFX_ENV_NAME}}.zip
 
       - name: Publish Teams App
         uses: OfficeDev/teamsfx-cli-action@v1
         with:
           commands: publish
+          env: ${{env.TEAMSFX_ENV_NAME}} 
