fix: rg name doesn't allow spaces

--- a/hello-world-tab/.fx/configs/projectSettings.json
+++ b/hello-world-tab/.fx/configs/projectSettings.json
@@ -1,5 +1,5 @@
 {
-    "appName": "Hello World Tab",
+    "appName": "Hello_World_Tab",
     "solutionSettings": {
         "name": "fx-solution-azure",
         "version": "1.0.0",
